--- a/src/main/java/Interface/Products/RegisterProduct.form
+++ b/src/main/java/Interface/Products/RegisterProduct.form
@@ -382,7 +382,7 @@
                                               <EmptySpace type="unrelated" max="-2" attributes="0"/>
                                               <Component id="CSV_Label" min="-2" pref="30" max="-2" attributes="0"/>
                                               <EmptySpace max="-2" attributes="0"/>
-                                              <Component id="jLabel5" min="-2" pref="24" max="-2" attributes="0"/>
+                                              <Component id="tzflaglabel" min="-2" pref="24" max="-2" attributes="0"/>
                                           </Group>
                                           <Component id="descriptioninput" min="-2" pref="748" max="-2" attributes="0"/>
                                           <Component id="locationinput" min="-2" pref="269" max="-2" attributes="0"/>
@@ -449,7 +449,7 @@
                               </Group>
                               <EmptySpace type="separate" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                  <Component id="jLabel5" max="32767" attributes="0"/>
+                                  <Component id="tzflaglabel" max="32767" attributes="0"/>
                                   <Group type="103" alignment="0" groupAlignment="3" attributes="0">
                                       <Component id="brandname" alignment="3" min="-2" max="-2" attributes="0"/>
                                       <Component id="brand" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -889,7 +889,7 @@
                 <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="CSV_LabelMouseClicked"/>
               </Events>
             </Component>
-            <Component class="javax.swing.JLabel" name="jLabel5">
+            <Component class="javax.swing.JLabel" name="tzflaglabel">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
                   <Image iconType="3" name="/resources/images/icons8-tanzania-16.png"/>
@@ -899,7 +899,7 @@
                 </Property>
               </Properties>
               <Events>
-                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jLabel5MouseClicked"/>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="tzflaglabelMouseClicked"/>
               </Events>
             </Component>
           </SubComponents>
