--- a/src/main/java/Interface/Products/RegisterProduct.form
+++ b/src/main/java/Interface/Products/RegisterProduct.form
@@ -284,6 +284,7 @@
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
               <Color id="Hand Cursor"/>
             </Property>
+            <Property name="enabled" type="boolean" value="false"/>
           </Properties>
           <Events>
             <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="saveProductFormMouseClicked"/>
