--- a/src/main/java/Interface/Sales/ReturnProduct.form
+++ b/src/main/java/Interface/Sales/ReturnProduct.form
@@ -23,7 +23,7 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="ReturnSaleBody" pref="1199" max="32767" attributes="0"/>
+          <Component id="ReturnSaleBody" max="32767" attributes="0"/>
           <Component id="Header" alignment="0" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
